--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,10 @@
-# 应用名称
 spring:
   application:
-    name: paper-backend
-  datasource:
-    name: defaultDataSource
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/blue?serverTimezone=UTC
-    username: root
-    password: 123456
-  # 应用服务 WEB 访问端口
+    name: service-search
+  elasticsearch:
+    rest:
+      uris: http://172.29.7.234:9200
+
+
 server:
   port: 8081
