--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,3 +11,16 @@ spring:
   # 应用服务 WEB 访问端口
 server:
   port: 8081
+# es 服务地址
+elasticsearch:
+  host: 172.29.7.234
+  # es 服务端口
+  port: 9200
+
+  # 配置日志级别,开启 debug 日志
+logging:
+  level:
+    com:
+      example:
+        paper: debug
+
