--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,22 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.36</version>
         </dependency>
+<!--        swagger-->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-annotations</artifactId>
+            <version>1.5.3</version>
+        </dependency>
 <!--        es部分-->
         <dependency>
             <groupId>org.projectlombok</groupId>
