--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,14 @@
+# 应用名称
 spring:
   application:
-    name: service-search
-  elasticsearch:
-    rest:
-      uris: http://172.29.7.234:9200
-
-
+    name: paper-backend
+  datasource:
+    name: defaultDataSource
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/blue?serverTimezone=UTC
+    username: root
+    password: 123456
+  # 应用服务 WEB 访问端口
 server:
   port: 8081
 # es 服务地址
